kubernetes/namespace/prod/drywall-flowlog-stats-mock/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flowlog-stats-mock
  labels:
    app: flowlog-stats-mock
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: http
  selector:
    app: drywall-flowlog-stats-mock
