kubernetes/namespace/prod/drywall-flowlog-stats-mock/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flowlog-stats-mock
spec:
  rules:
  - host: test-mock.flowlog-stats.com
    http:
      paths:
      - path: /
        backend:
          serviceName: flowlog-stats-mock
          servicePort: 3000
